# ghback/api/urls.py
@@ -18,6 +18,8 @@ urlpatterns = [
     path('queries/top', views.queries_top, name='queries_top'),
     path('queries/search', views.queries_search, name='queries_search'),
     path('products/<int:articul>', views.product, name='product'),
+    path('brands/<int:brandId>', views.brand, name='brand'),
+    path('suppliers/<int:supplierId>', views.supplier, name='supplier'),
     path('transfer/config', views.transfer_config, name='transfer_config'),
     path('transfer/category', views.transfer_category, name='transfer_category'),
     path('transfer/query', views.transfer_query, name='transfer_query'),
